use valueOf (findbugs)